--- a/Style.css
+++ b/Style.css
@@ -1,21 +1,20 @@
 
-@import url('https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital@1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@300&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'STIX Two Text', serif;
+    font-family: 'IBM Plex Sans Thai', sans-serif;
 }
-
+/*boby*/
 body{
     background: lightpink;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-}
+}/*left=right*/
 .container{
     position: relative;
     width:100%;
@@ -27,10 +26,12 @@ body{
     grid-template-columns: 1fr 2fr;
     box-shadow: 0 35px 55px rgba(0, 0,0,0.1 );
 }
+/*left-side*/
 .container .left-side{
     position: relative;
     background: lightblue;
     padding: 40px;
+    
 }
 
 .profile{
@@ -98,9 +99,10 @@ body{
     font-weight: 600;
 
 }
-.contactinfo .sig{
+.about .sig{
     font-family:'Satisfy', cursive;
 }
+/*right-side*/
 .container .right-side{
     position: relative;
     background: #fff;
@@ -153,4 +155,13 @@ p{
     left: 0;
     height: 100%;
     background:#03a9f4;
+}
+
+@media (max-width: 1000px)
+{
+    .container
+    {
+        margin: 10px;
+        grid-template-columns: repeat(1,1fr);
+    }
 }
